--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </td>
 <td id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="arinjay.jpg" alt="alt text" width="200px" height="300px" />&nbsp;</td>
+<img src="arinjay.jpeg" alt="alt text" width="200px" height="300px" />&nbsp;</td>
 <td align="left"><p><br />
 Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href="dot">dot</a> com <br /></p>
 </td></tr></table>
