--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <td id="layout-content">
 <table class="imgtable"><tr><td>
 <img src="arinjay.jpeg" alt="alt text" width="200px" height="300px" />&nbsp;</td>
-<td align="left"><p><br />
+<td align="left">
+  Welcome
+  <p><br />
 Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href="dot">dot</a> com <br /></p>
 </td></tr></table>
 <h2>Activities</h2>
