--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 <li><p>Badminton</p>
 </li>
 <li><p>Story writing</p>
+</td></tr></table>
+<h2>About</h2>
+<ul>
+<li><p>My name is arinjay</p>
+</li>
+<li><p>I am a good boy</p>
+</li>
+<li><p>I am an Indian</p>
+</li>
+<li><p>I am 11+ years old</p>
 </li>
 </ul>
 </td>
