--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 <li><p>Badminton</p>
 </li>
 <li><p>Story writing</p>
-</td></tr></table>
+  
+  
+</tr></td></table>
+  
+  
+ </td></tr></table> 
 <h2>About</h2>
 <ul>
 <li><p>My name is arinjay</p>
