--- a/index.html
+++ b/index.html
@@ -45,11 +45,8 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 <li><p>Story writing</p>
   
   
-</tr></td></table>
-  
-  
- </td></tr></table> 
-<h2>About</h2>
+ 
+<h2>About Myself</h2>
 <ul>
 <li><p>My name is arinjay</p>
 </li>
@@ -60,8 +57,6 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 <li><p>I am 11+ years old</p>
 </li>
 </ul>
-</td>
-</tr>
-</table>
+
 </body>
 </html>
