--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <p><br />
 Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href="dot">dot</a> com <br /></p>
 </td></tr></table>
+  
+  
 <h2>Activities</h2>
 <ul>
 <li><p>Painting</p>
@@ -43,12 +45,13 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 <li><p>Badminton</p>
 </li>
 <li><p>Story writing</p>
-  
+  </li>
+</ul>
   
  
 <h2>About Myself</h2>
 <ul>
-<li><p>My name is arinjay</p>
+<li><p>My name is Arinjay</p>
 </li>
 <li><p>I am a good boy</p>
 </li>
