--- a/index.html
+++ b/index.html
@@ -59,7 +59,24 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 </li>
 <li><p>I am 11+ years old</p>
 </li>
+<li><p>I study in a school called Kendriya Vidyalaya Kanjikode</p>
+</li>
+</li>
+<li><p>My parents work in an institute called Indian Institute Of India Palakkad</p>
 </ul>
-
+  
+ 
+<h2>My Favourites</h2>
+<ul>
+<li><p>Rabbits and Tigers which are my favourite animals</p>
+</li>
+<li><p>Badminton and Football which are my favourite sports</p>
+</li>
+<li><p>Mathematics which is my favourite subject</p>
+</li>
+<li><p>Pasta which is my favourite food</p>
+</li>
+</li>I want to be a scientist when I grow up.(My favourite job:scientist)
+</ul>
 </body>
 </html>
