--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 </li>
 <li><p>Pasta which is my favourite food</p>
 </li>
-</li><p>I want to be a scientist when I grow up.(My favourite job:scientist)
+</li><p>I want to be a scientist when I grow up.(My favourite job:scientist)</p>
 </ul>
   
   
