--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 </li>
 <li><p>Mathematics which is my favourite subject</p>
 </li>
-<li><p>Pasta which is my favourite food</p>
+<li><p>Pasta and Mamma chicken which are my favourite food</p>
 </li>
 <li><p>I want to be a scientist when I grow up.(My favourite job:scientist)</p>
 </ul>
