--- a/stories.html
+++ b/stories.html
@@ -5,9 +5,14 @@
 <title>Stories</title>
 </head>
 <body>
+<td id="layout-content">
+<table class="imgtable"><tr><td>
+<img src="arinjay.jpeg" alt="alt text" width="200px" height="300px" />&nbsp;</td>
+<td align="left">
+  <p><br />
 
-<h1>Stories By Me</h1>
-
+  Stories By Me
+    <br/></p>
 
 </body>
 </html>
