--- a/stories.html
+++ b/stories.html
@@ -5,6 +5,8 @@
 <title>Stories</title>
 </head>
 <body>
+<div id="fwtitle">
+<div id="toptitle">
 <td id="layout-content">
 <table class="imgtable"><tr><td>
 <img src="arinjay.jpeg" alt="alt text" width="200px" height="300px" />&nbsp;</td>
