--- a/stories.html
+++ b/stories.html
@@ -9,7 +9,7 @@
 <div id="toptitle">
 <td id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="arinjay.jpeg" alt="alt text" width="200px" height="300px" />&nbsp;</td>
+<img src="my job.jpeg" alt="alt text" width="200px" height="300px" />&nbsp;</td>
 <td align="left">
   <p><br />
 
