--- a/stories.html
+++ b/stories.html
@@ -12,9 +12,30 @@
 <img src="my job.jpeg" alt="alt text" width="50px" height="50px" />&nbsp;</td>
 <td align="left">
   <p><br />
-http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023
-  Stories By Me
+    
+    Stories By Me
+    
     <br/></p>
+<h2>Stories with links to read</h2>
+<ul>
+<li><p>The Coloured Rabbit  Link: http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023</p>
+</li>
+<li><p>Nature The Mighty Changer Link: http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025</p>
+</li>
+<li><p>The Untold Saga Of The Tortoise & The Hare</p> 
+</li>
+<li>Link: https://docs.google.com/document/d/17IBskcyesXs88nBuoL0ClXzFwUAjs-nDfWKN5KeIbT0/edit#heading=h.1bzxdpiwknaa
+</li>
+<li><p>Save Human Save Earth</p> 
+</li>
+<li>Link: https://docs.google.com/document/d/1VJuWNEAo6_Eb9qONFfSpZbTNoZ79MVxsgGIVHAKJ2yQ/edit#heading=h.o5zd12gdo15w
+</li>
+<li><p>The Chase In The Dream</p> 
+</li>
+<li>Link: https://docs.google.com/document/d/1Ua4OI3Y0Exzx1Lc4zSxXQEp_OKvPBYwjEk3X1-y_9MQ/edit#
+</li>
+</ul>
+  
 
 </body>
 </html>
