--- a/stories.html
+++ b/stories.html
@@ -11,6 +11,15 @@
 <table class="imgtable"><tr><td>
 <img src="my job.jpeg" alt="alt text" width="50px" height="50px" />&nbsp;</td>
 <td align="left">
+  <p><br />
+
+  Stories By Me
+    <br/></p>
+  
+  
+</td></tr></table>
+  
+  
 <h2>Stories with links to read</h2>
 <ul>
 <li><p>The Coloured Rabbit  Link: http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023</p>
