--- a/stories.html
+++ b/stories.html
@@ -13,14 +13,14 @@
 <td align="left">
   <p><br />
 
-  style="font-size:50px;">Stories Written By Me
+  <pstyle="font-size:50px;">Stories Written By Me</p>
     <br/></p>
   
   
 </td></tr></table>
   
   
-<h2>Stories with links to read</h2>
+<h2><p style="color:red;">Stories with links to read</p></h2>
 <ul>
 <li><p>The Coloured Rabbit  Link: http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023</p>
 </li>
