--- a/stories.html
+++ b/stories.html
@@ -20,9 +20,9 @@
 </td></tr></table>
   
   
-<h2><p style="color:red;">Stories with links to read</p></h2>
+<h2><p style="color:red;">Stories for reading</p></h2>
 <ul>
-<li><p>The Coloured Rabbit  Link: http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023</p>
+<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023">The Coloured Rabbit</p>
 </li>
 <li><p>Nature The Mighty Changer Link: http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025</p>
 </li>
