--- a/stories.html
+++ b/stories.html
@@ -24,7 +24,7 @@
 <ul>
 <li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023">The Coloured Rabbit</p>
 </li>
-<li><p>Nature The Mighty Changer Link: http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025</p>
+<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025">Nature The Mighty Changer</p>
 </li>
 <li><p>The Untold Saga Of The Tortoise & The Hare</p> 
 </li>
