--- a/stories.html
+++ b/stories.html
@@ -22,9 +22,9 @@
   
 <h2><p style="color:red;">Stories for reading</p></h2>
 <ul>
-<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023">The Coloured Rabbit</p>
+<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023">The Coloured Rabbit</a></p>
 </li>
-<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025">Nature The Mighty Changer</p>
+<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025">Nature The Mighty Changer</a></p>
 </li>
 <li><p>The Untold Saga Of The Tortoise & The Hare</p> 
 </li>
