--- a/stories.html
+++ b/stories.html
@@ -26,9 +26,7 @@
 </li>
 <li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025">Nature The Mighty Changer</a></p>
 </li>
-<li><p>The Untold Saga Of The Tortoise & The Hare</p> 
-</li>
-<li>Link: https://docs.google.com/document/d/17IBskcyesXs88nBuoL0ClXzFwUAjs-nDfWKN5KeIbT0/edit#heading=h.1bzxdpiwknaa
+<li><p><a href="https://docs.google.com/document/d/17IBskcyesXs88nBuoL0ClXzFwUAjs-nDfWKN5KeIbT0/edit#heading=h.1bzxdpiwknaa">The Untold Saga Of The Tortoise & The Hare</a></p>
 </li>
 <li><p>Save Human Save Earth</p> 
 </li>
