--- a/stories.html
+++ b/stories.html
@@ -28,9 +28,7 @@
 </li>
 <li><p><a href="https://docs.google.com/document/d/17IBskcyesXs88nBuoL0ClXzFwUAjs-nDfWKN5KeIbT0/edit#heading=h.1bzxdpiwknaa">The Untold Saga Of The Tortoise & The Hare</a></p>
 </li>
-<li><p>Save Human Save Earth</p> 
-</li>
-<li>Link: https://docs.google.com/document/d/1VJuWNEAo6_Eb9qONFfSpZbTNoZ79MVxsgGIVHAKJ2yQ/edit#heading=h.o5zd12gdo15w
+<li><p><a href="https://docs.google.com/document/d/1VJuWNEAo6_Eb9qONFfSpZbTNoZ79MVxsgGIVHAKJ2yQ/edit#heading=h.o5zd12gdo15w">Save Human Save Earth</a></p>
 </li>
 <li><p>The Chase In The Dream</p> 
 </li>
