--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Arinjay Dasbhadra</title>
 </head>
-<body>
+<bodystyle="background-color:powderblue;">
 <div id="fwtitle">
 <div id="toptitle">
 <h1>Arinjay Dasbhadra</h1>
