--- a/stories.html
+++ b/stories.html
@@ -4,7 +4,7 @@
 <head>
 <title>Stories</title>
 </head>
-<body>
+<body style="background-color:tomato;">
 <div id="fwtitle">
 <div id="toptitle">
 <td id="layout-content">
