--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 </td></tr></table>
   
   
-<h2>Activities</h2>
+<h2 style="background-color:light green;">Activities</h2>
 <ul>
 <li><p>Painting</p>
 </li>
@@ -49,7 +49,7 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 </ul>
   
  
-<h2>About Myself</h2>
+<h2 style="background-color:tomato;">About Myself</h2>
 <ul>
 <li><p>My name is Arinjay</p>
 </li>
@@ -65,7 +65,7 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 </ul>
   
  
-<h2>My Favourites</h2>
+<h2 style="background-color:yellow;">My Favourites</h2>
 <ul>
 <li><p>Rabbits and Tigers which are my favourite animals</p>
 </li>
