--- a/stories.html
+++ b/stories.html
@@ -20,7 +20,7 @@
 </td></tr></table>
   
   
-<h2><p style="color:red;">Stories for reading</p></h2>
+<h2><p style="color:green;">Stories for reading</p></h2>
 <ul>
 <li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023">The Coloured Rabbit</a></p>
 </li>
