--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Email: arinjay <a href="dot">dot</a> dasbhadra <a href="at">at</a> gmail <a href
 </td></tr></table>
   
   
-<h2 style="background-color:light green;">Activities</h2>
+<h2 style="background-color:green;">Activities</h2>
 <ul>
 <li><p>Painting</p>
 </li>
