--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
  
 <h2 style="background-color:tomato;">About Myself</h2>
 <ul>
-<li><p>My name is Arinjay</p>
+<li><p>My name is Arinjay Dasbhadra</p>
 </li>
 <li><p>I am a good boy</p>
 </li>
