--- a/paintings.html
+++ b/paintings.html
@@ -4,7 +4,20 @@
 <title>Stories</title>
 </head>
 <body style="background-color:Chartreuse;">
+<div id="fwtitle">
+<div id="toptitle">
+<td id="layout-content">
+<table class="imgtable"><tr><td>
+<img src="my job.jpeg" alt="alt text" width="100px" height="100px" />&nbsp;</td>
+<td align="left">
+  <p><br />
 
+  <p style="font-size:50px;">Stories Written By Me</p>
+    <br/></p>
+  
+  
+</td></tr></table>
+  
   
 </body>
 </html>
