--- a/paintings.html
+++ b/paintings.html
@@ -8,7 +8,7 @@
 <div id="toptitle">
 <td id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="my job.jpeg" alt="alt text" width="100px" height="100px" />&nbsp;</td>
+<img src="ferrari.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</td>
 <td align="left">
   <p><br />
 
