--- a/paintings.html
+++ b/paintings.html
@@ -12,7 +12,7 @@
 <td align="left">
   <p><br />
 
-  <p style="font-size:50px;">Stories Written By Me</p>
+  <p style="font-size:50px;">Paintings Painted By Me</p>
     <br/></p>
   
   
