--- a/paintings.html
+++ b/paintings.html
@@ -18,6 +18,11 @@
   
 </td></tr></table>
   
+<table class="imgtable"><tr><td>
+<img src="Arinjay Dasbhadra.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</tr> 
+<img src="Arinjay Dasbhadra2.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</tr>
+<img src="Arinjay Dasbhadra3.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</tr> 
+<img src="Arinjay Dasbhadra4.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</tr></td>  
   
 </body>
 </html>
