--- a/paintings.html
+++ b/paintings.html
@@ -19,10 +19,10 @@
 </td></tr></table>
   
 <table class="imgtable"><tr><td>
-<img src="ArinjayDasbhadra.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</tr> 
-<img src="ArinjayDasbhadra2.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</tr>
-<img src="ArinjayDasbhadra3.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</tr> 
-<img src="ArinjayDasbhadra4.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</tr></td>  
+<img src="ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="100px" />&nbsp;</tr> 
+<img src="ArinjayDasbhadra2.jpg" alt="alt text" width="200px" height="100px" />&nbsp;</tr>
+<img src="ArinjayDasbhadra3.jpg" alt="alt text" width="200px" height="100px" />&nbsp;</tr> 
+<img src="ArinjayDasbhadra4.jpg" alt="alt text" width="200px" height="100px" />&nbsp;</tr></td>  
   
 </body>
 </html>
