--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </li>
 <li><p>Pasta and Mamma chicken (Mamma chicken is a dish wish my mother makes) which are my favourite food</p>
 </li>
+<li><p>Isuzu D-max Z-prestige which is my favourite type of car</p>
+</li>
 <li><p>I want to be a scientist when I grow up.(My favourite job:scientist)</p>
 </ul>
   
