--- a/paintings.html
+++ b/paintings.html
@@ -6,7 +6,17 @@
 <body style="background-color:Chartreuse;">
 <div id="fwtitle">
 <div id="toptitle">
-<td id="layout-content">
+  </div>
+  </div>
+<table summary="Table for page layout." id="tlayout">
+<tr valign="top">
+<td id="layout-menu">
+<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="paintings.html" class="current">Paintings</a></div>
+<div class="menu-item"><a href="stories.html">Stories</a></div>
+</td>
+  
+  <td id="layout-content">
 <table class="imgtable"><tr><td>
 <img src="ferrari.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</td>
 <td align="left">
