--- a/paintings.html
+++ b/paintings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Stories</title>
+<title>Paintings</title>
 </head>
 <body style="background-color:Chartreuse;">
 <div id="fwtitle">
