--- a/stories.html
+++ b/stories.html
@@ -7,12 +7,22 @@
 <body style="background-color:tomato;">
 <div id="fwtitle">
 <div id="toptitle">
+</div>
+</div>
+<table summary="Table for page layout." id="tlayout">
+<tr valign="top">
+<td id="layout-menu">
+<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="paintings.html">Paintings</a></div>
+<div class="menu-item"><a href="stories.html" class="current">Stories</a></div>
+</td>
+  
 <td id="layout-content">
 <table class="imgtable"><tr><td>
 <img src="my job.jpeg" alt="alt text" width="100px" height="100px" />&nbsp;</td>
 <td align="left">
 <p><br />
-
+  
 <p style="font-size:50px;">Stories Written By Me</p>
 <br/></p>
   
