--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </td></tr></table>
   
   
-<h2 style="background-color:orange;">Extra Activities Done By Me</h2>
+<h2 style="background-color:orange;">Interesting Activities Done By Me</h2>
 <ul>
 <li><p>Painting</p>
 </li>
