--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 <li><p>I want to be a scientist when I grow up.(My favourite job:scientist)</p>
 </ul>
   
+
+<h2><p style="color:pink;">Other websites and links you might want to visit</p></h2>
+<ul>
+<li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
+</li>
+<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025">Nature The Mighty Changer</a></p>
+</li>
+<li><p><a href="https://docs.google.com/document/d/17IBskcyesXs88nBuoL0ClXzFwUAjs-nDfWKN5KeIbT0/edit#heading=h.1bzxdpiwknaa">The Untold Saga Of The Tortoise & The Hare</a></p>
+</li>
+<li><p><a href="https://docs.google.com/document/d/1VJuWNEAo6_Eb9qONFfSpZbTNoZ79MVxsgGIVHAKJ2yQ/edit#heading=h.o5zd12gdo15w">Save Human Save Earth</a></p>
+</li>
+<li><p><a href="https://docs.google.com/document/d/1Ua4OI3Y0Exzx1Lc4zSxXQEp_OKvPBYwjEk3X1-y_9MQ/edit#">The Chase In The Dream</a></p>
+</li>
+</ul>
+  
   
 </body>
 </html>
