--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
   
 
-<h2><p style="color:pink;">Other websites you might want to visit</p></h2>
+<h2><p style="background-color:pink;">Other websites you might want to visit</p></h2>
 <ul>
 <li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
 </li>
