--- a/paintings.html
+++ b/paintings.html
@@ -14,6 +14,7 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="paintings.html" class="current">Paintings</a></div>
 <div class="menu-item"><a href="stories.html">Stories</a></div>
+<div class="menu-item"><a href="codings">Codings</a></div>  
 </td>
   
   <td id="layout-content">
