--- a/stories.html
+++ b/stories.html
@@ -15,6 +15,7 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="paintings.html">Paintings</a></div>
 <div class="menu-item"><a href="stories.html" class="current">Stories</a></div>
+<div class="menu-item"><a href="codings">Codings</a></div>  
 </td>
   
 <td id="layout-content">
