--- a/codings.html
+++ b/codings.html
@@ -1,1 +1,51 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<title>Stories</title>
+</head>
+<body style="background-color:plum;">
+<div id="fwtitle">
+<div id="toptitle">
+</div>
+</div>
+<table summary="Table for page layout." id="tlayout">
+<tr valign="top">
+<td id="layout-menu">
+<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="paintings.html">Paintings</a></div>
+<div class="menu-item"><a href="stories.html">Stories</a></div>
+<div class="menu-item"><a href="codings.html" class="current">Codings</a></div>  
+</td>
+  
+<td id="layout-content">
+<table class="imgtable"><tr><td>
+<img src="my job.jpeg" alt="alt text" width="100px" height="100px" />&nbsp;</td>
+<td align="left">
+<p><br />
+  
+<p style="font-size:50px;">Codes Created By Me</p>
+<br/></p>
+  
+  
+</td></tr></table>
+  
+  
+<h2><p style="color:MediumBlue;">Codes for watching and playings</p></h2>
+<ul>
+<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023">The Coloured Rabbit</a></p>
+</li>
+<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025">Nature The Mighty Changer</a></p>
+</li>
+<li><p><a href="https://docs.google.com/document/d/17IBskcyesXs88nBuoL0ClXzFwUAjs-nDfWKN5KeIbT0/edit#heading=h.1bzxdpiwknaa">The Untold Saga Of The Tortoise & The Hare</a></p>
+</li>
+<li><p><a href="https://docs.google.com/document/d/1VJuWNEAo6_Eb9qONFfSpZbTNoZ79MVxsgGIVHAKJ2yQ/edit#heading=h.o5zd12gdo15w">Save Human Save Earth</a></p>
+</li>
+<li><p><a href="https://docs.google.com/document/d/1Ua4OI3Y0Exzx1Lc4zSxXQEp_OKvPBYwjEk3X1-y_9MQ/edit#">The Chase In The Dream</a></p>
+</li>
+</ul>
+  
+
+</body>
+</html>
+
