--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="paintings.html">Paintings</a></div>
 <div class="menu-item"><a href="stories.html">Stories</a></div>
-<div class="menu-item"><a href="codings">Codings</a></div>
+<div class="menu-item"><a href="codings.html">Codings</a></div>
 </td>
 <td id="layout-content">
 <table class="imgtable"><tr><td>
