--- a/codings.html
+++ b/codings.html
@@ -31,7 +31,7 @@
 </td></tr></table>
   
   
-<h2><p style="color:MediumBlue;">Codes for watching and playings</p></h2>
+<h2><p style="color:MediumBlue;">Codes for watching and playing</p></h2>
 <ul>
 <li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023">The Coloured Rabbit</a></p>
 </li>
