--- a/codings.html
+++ b/codings.html
@@ -20,7 +20,7 @@
   
 <td id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="my job.jpeg" alt="alt text" width="100px" height="100px" />&nbsp;</td>
+<img src="code2.png" alt="alt text" width="200px" height="150px" />&nbsp;</td>
 <td align="left">
 <p><br />
   
