--- a/codings.html
+++ b/codings.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Stories</title>
+<title>Codings</title>
 </head>
 <body style="background-color:plum;">
 <div id="fwtitle">
