--- a/codings.html
+++ b/codings.html
@@ -33,15 +33,9 @@
   
 <h2><p style="color:MediumBlue;">Codes for watching and playing</p></h2>
 <ul>
-<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=023">The Coloured Rabbit</a></p>
+<li><p><a href="https://scratch.mit.edu/search/projects?q=iamarinjay">Games,stories, and starters made by me in scratch</a></p>
 </li>
 <li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025">Nature The Mighty Changer</a></p>
-</li>
-<li><p><a href="https://docs.google.com/document/d/17IBskcyesXs88nBuoL0ClXzFwUAjs-nDfWKN5KeIbT0/edit#heading=h.1bzxdpiwknaa">The Untold Saga Of The Tortoise & The Hare</a></p>
-</li>
-<li><p><a href="https://docs.google.com/document/d/1VJuWNEAo6_Eb9qONFfSpZbTNoZ79MVxsgGIVHAKJ2yQ/edit#heading=h.o5zd12gdo15w">Save Human Save Earth</a></p>
-</li>
-<li><p><a href="https://docs.google.com/document/d/1Ua4OI3Y0Exzx1Lc4zSxXQEp_OKvPBYwjEk3X1-y_9MQ/edit#">The Chase In The Dream</a></p>
 </li>
 </ul>
   
