--- a/codings.html
+++ b/codings.html
@@ -35,7 +35,7 @@
 <ul>
 <li><p><a href="https://scratch.mit.edu/search/projects?q=iamarinjay">Games,stories, and starters made by me in scratch</a></p>
 </li>
-<li><p><a href="http://digitallibrary.kvklibrary.in/virtuallibrary/book.php?id=025">Nature The Mighty Changer</a></p>
+<li><p><a href="https://arinjay-dasbhadra.github.io/index.html">My Website</a></p>
 </li>
 </ul>
   
