--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 <ul>
 <li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
 </li>
+<li><p><a href="https://scratch.mit.edu">Scratch</a></p>
+</li>
+<li><p><a href="https://scratch.mit.edu">Scratch</a></p>
+</li>
 <li><p><a href="https://iitpkd.ac.in/">Indian Institute Of Technology Palakkad</a></p>
 </li>
 <li><p><a href="https://sahelybhadra.github.io/index.html">Sahely Bhadra (My Mother)</a></p>
@@ -97,7 +101,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 <li><p><a href="https://nmrinl.github.io/index.html">Mrinal Kanti Das (My Father)</a></p>
 </li>
 </ul>
-  
+ 
   
 </body>
 </html>
