--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
   
 
-<h2><p style="background-color:pink;">Other websites you might want to visit</p></h2>
+<h2><p style="background-color:pink;">Other websites and links you might want to visit</p></h2>
 <ul>
 <li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
 </li>
-<li><p><a href="https://scratch.mit.edu">Scratch</a></p>
+<li><p><a href="https://scratch.mit.edu">Scratch (The place where I made my games and stuff)</a></p>
 </li>
-<li><p><a href="https://scratch.mit.edu">Scratch</a></p>
+<li><p><a href="https://github.com/">GitHub (The place where I made my Website)</a></p>
 </li>
 <li><p><a href="https://iitpkd.ac.in/">Indian Institute Of Technology Palakkad</a></p>
 </li>
