--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 <ul>
 <li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
 </li>
-<li><p><a href="https://scratch.mit.edu">Scratch (The place where I made my games and stuff)</a></p>
+<li><p><a href="https://scratch.mit.edu">Scratch</a> (The place where I made my games and stuff)</p>
 </li>
-<li><p><a href="https://github.com/">GitHub (The place where I made my Website)</a></p>
+<li><p><a href="https://github.com/">GitHub</a> (The place where I made my Website)</p>
 </li>
 <li><p><a href="https://iitpkd.ac.in/">Indian Institute Of Technology Palakkad</a></p>
 </li>
-<li><p><a href="https://sahelybhadra.github.io/index.html">Sahely Bhadra (My Mother)</a></p>
+<li><p><a href="https://sahelybhadra.github.io/index.html">Sahely Bhadra</a> (My Mother)</p>
 </li>
-<li><p><a href="https://nmrinl.github.io/index.html">Mrinal Kanti Das (My Father)</a></p>
+<li><p><a href="https://nmrinl.github.io/index.html">Mrinal Kanti Das</a> (My Father)</a></p>
 </li>
 </ul>
  
