--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </li>
 <li><p><a href="https://sahelybhadra.github.io/index.html">Sahely Bhadra</a> (My Mother)</p>
 </li>
-<li><p><a href="https://nmrinl.github.io/index.html">Mrinal Kanti Das</a> (My Father)</a></p>
+<li><p><a href="https://nmrinl.github.io/index.html">Mrinal Kanti Das</a> (My Father)</p>
+</li>
+<li><p>If you liked my games and stuff which I made in Scratch then look in the link<a href="https://scratch.mit.edu/users/griffpatch/"> Griffpatch Coder in Scratch</a></p>
 </li>
 </ul>
  
