--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </td></tr></table>
   
   
-<h2 style="background-color:orange; "style="font-family:Brush Script MT;">Interesting Activities Done By Me</h2>
+<h2 style="background-color:orange; "style="font-family:veranda;">Interesting Activities Done By Me</h2>
 <ul>
 <li><p>Painting</p>
 </li>
@@ -54,7 +54,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
   
  
-<h2 style="background-color:tomato;" "style="font-family:Brush Script MT;">About Myself</h2>
+<h2 style="background-color:tomato;" "style="font-family:veranda;">About Myself</h2>
 <ul>
 <li><p>My name is Arinjay Dasbhadra</p>
 </li>
@@ -70,7 +70,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
   
  
-<h2 style="background-color:yellow;" "style="font-family:Brush Script MT;">My Favourites</h2>
+<h2 style="background-color:yellow;" "style="font-family:veranda;">My Favourites</h2>
 <ul>
 <li><p>Rabbits and Tigers which are my favourite animals</p>
 </li>
@@ -86,7 +86,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
   
 
-<h2><p style="background-color:pink;" "style="font-family:Brush Script MT;">Other websites and links you might want to visit</p></h2>
+<h2><p style="background-color:pink;" "style="font-family:veranda;">Other websites and links you might want to visit</p></h2>
 <ul>
 <li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
 </li>
