--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
   
 <h2 style="border: 3px solid Cyan;">Hello</h2>  
   
-<h2 style="background-color:orange; "style="font-family:veranda;">Interesting Activities Done By Me</h2>
+<h2 style="background-color:orange;>Interesting Activities Done By Me</h2>
 <ul>
 <li><p>Painting</p>
 </li>
@@ -55,7 +55,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
   
  
-<h2 style="background-color:tomato;" "style="font-family:veranda;">About Myself</h2>
+<h2 style="background-color:tomato;">About Myself</h2>
 <ul>
 <li><p>My name is Arinjay Dasbhadra</p>
 </li>
@@ -71,7 +71,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
   
  
-<h2 style="background-color:yellow;" "style="font-family:veranda;">My Favourites</h2>
+<h2 style="background-color:yellow;">My Favourites</h2>
 <ul>
 <li><p>Rabbits and Tigers which are my favourite animals</p>
 </li>
@@ -87,7 +87,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
   
 
-<h2><p style="background-color:pink;" "style="font-family:veranda;">Other websites and links you might want to visit</p></h2>
+<h2><p style="background-color:pink;">Other websites and links you might want to visit</p></h2>
 <ul>
 <li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
 </li>
