--- a/index.html
+++ b/index.html
@@ -87,7 +87,44 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
   
 
+<h2><p style="background-color:Aquamarine;">Other websites and links you might want to visit</p></h2>                                                                                                                                       <h2><p style="background-color:pink;">Other websites and links you might want to visit</p></h2>
+<ul>
+<li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
+</li>
+<li><p><a href="https://scratch.mit.edu">Scratch</a> (The place where I made my games and stuff)</p>
+</li>
+<li><p><a href="https://github.com/">GitHub</a> (The place where I made my Website)</p>
+</li>
+<li><p><a href="https://iitpkd.ac.in/">Indian Institute Of Technology Palakkad</a></p>
+</li>
+<li><p><a href="https://sahelybhadra.github.io/index.html">Sahely Bhadra</a> (My Mother)</p>
+</li>
+<li><p><a href="https://nmrinl.github.io/index.html">Mrinal Kanti Das</a> (My Father)</p>
+</li>
+<li><p>If you liked my games and stuff which I made in Scratch then look in the link<a href="https://scratch.mit.edu/users/griffpatch/"> Griffpatch Coder in Scratch</a></p>
+</li>
+</ul>
+ 
+  
 <h2><p style="background-color:pink;">Other websites and links you might want to visit</p></h2>
+<ul>
+<li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
+</li>
+<li><p><a href="https://scratch.mit.edu">Scratch</a> (The place where I made my games and stuff)</p>
+</li>
+<li><p><a href="https://github.com/">GitHub</a> (The place where I made my Website)</p>
+</li>
+<li><p><a href="https://iitpkd.ac.in/">Indian Institute Of Technology Palakkad</a></p>
+</li>
+<li><p><a href="https://sahelybhadra.github.io/index.html">Sahely Bhadra</a> (My Mother)</p>
+</li>
+<li><p><a href="https://nmrinl.github.io/index.html">Mrinal Kanti Das</a> (My Father)</p>
+</li>
+<li><p>If you liked my games and stuff which I made in Scratch then look in the link<a href="https://scratch.mit.edu/users/griffpatch/"> Griffpatch Coder in Scratch</a></p>
+</li>
+</ul>
+                                                                                                                                       
+<h2><p style="background-color:pink;">Other websites and links you might want to visit</p></h2>                                                                                                                                       <h2><p style="background-color:pink;">Other websites and links you might want to visit</p></h2>
 <ul>
 <li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
 </li>
