--- a/oyster.html
+++ b/oyster.html
@@ -24,3 +24,18 @@
   
   
 </td></tr></table>
+  
+<video width="400" controls>
+  <source src="mov_bbb.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  Your browser does not support HTML video.
+</video>
+
+<p>
+Video courtesy of 
+<a href="https://www.youtube.com/watch?v=mwR5WXmY3Yc" target="_blank">Big Buck Bunny</a>.
+</p>
+  
+ 
+</body>
+</html>
