--- a/oyster.html
+++ b/oyster.html
@@ -33,7 +33,7 @@
 
 <p>
 Video courtesy of 
-<a href="https://www.youtube.com/watch?v=mwR5WXmY3Yc" target="_blank">Big Buck Bunny</a>.
+<a href="https://www.youtube.com/watch?v=mwR5WXmY3Yc" target="_blank">how do oysters make pearls</a>.
 </p>
   
  
