--- a/oyster.html
+++ b/oyster.html
@@ -35,7 +35,7 @@
 
 <p>
 Video courtesy of 
-<a href="https://www.youtube.com/watch?v=mwR5WXmY3Yc" target="_blank">how do oysters make pearls</a>.
+<a href="oyster video.html" target="_blank">how do oysters make pearls</a>.
 </p>
   
  
