--- a/oyster.html
+++ b/oyster.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Paintings</title>
+<title>How do oysters make pearls</title>
 </head>
-<body style="background-color:Chartreuse;">
+<body style="background-color:DarkTurquoise;">
 <div id="fwtitle">
 <div id="toptitle">
   </div>
