--- a/oyster.html
+++ b/oyster.html
@@ -15,7 +15,7 @@
 </td>
   <td id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="ferrari.jpeg" alt="alt text" width="200px" height="100px" />&nbsp;</td>
+<img src="oster 200x125.jpg" alt="alt text" width="200px" height="125px" />&nbsp;</td>
 <td align="left">
 <p><br />
 
