--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 <li><p>I study in a school called Kendriya Vidyalaya Kanjikode</p>
 </li>
 <li><p>My parents work in an institute called Indian Institute Of India Palakkad</p>
+</li>
 </ul>
   
  
@@ -84,8 +85,15 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 <li><p>Isuzu D-max Z-prestige which is my favourite type of car</p>
 </li>
 <li><p>I want to be a scientist when I grow up.(My favourite job:scientist)</p>
+</li>
 </ul>
- 
+
+                                    
+<h2><p style="background-color:Aquamarine;">Education</p></h2>
+<ul>
+<li><p><a href="oyster.html">How do oysters make pearls</a></p>
+</li>
+
   
 <h2><p style="background-color:pink;">Other websites and links you might want to visit</p></h2>
 <ul>
@@ -106,5 +114,6 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
  
   
+
 </body>
 </html>
