--- a/oyster.html
+++ b/oyster.html
@@ -28,7 +28,7 @@
   <p>The formation of a natural pearl begins when a foreign substance slips into the oyster between the mantle and the shell, which irritate­s the mantle. It's kind of like the oyster getting a splinter. The oyster's natural reaction is to cover up that irritant to protect itself. The man­tle covers the irritant with layers of the same nacre substance that is used to create the shell. This eventually forms a pearl.<br>So a pearl is a foreign substance covered with layers of nacre. Most pearls that we see in jewelry stores are nicely rounded objects, which are the most valuable ones.<br>Not all pearls turn out so well. Some pearls form in an uneven shape these are called baroque pearls. Pearls, as you've probably noticed, come in a variety of various colors, including white, black, gray, red, blue and green.<br> Most pearls can be found all over the world, but black pearls are indigenous to the South Pacific.</p>
   
 <video width="400" controls>
-  <source src="mov_bbb.mp4" type="video/mp4">
+  <source src="mov_bbb.webm" type="video/webm">
   <source src="mov_bbb.ogg" type="video/ogg">
   Your browser does not support HTML video.
 </video>
