--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </ul>
 
                                     
-<h2><p style="background-color:Aquamarine;">Education</p></h2>
+<h2><p style="background-color:Aquamarine;">Interesting Learning</p></h2>
 <ul>
 <li><p><a href="oyster.html">How do oysters make pearls</a></p>
 </li>
