--- a/oyster.html
+++ b/oyster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>How do oysters make pearls</title>
+<title>How do birds fly</title>
 </head>
 <body style="background-color:DarkTurquoise;">
 <div id="fwtitle">
@@ -19,14 +19,22 @@
 <td align="left">
 <p><br />
 
-<p style="font-size:50px;">How do oysters make pearls</p>
+<p style="font-size:50px;">>How do birds fly</p>
 <br/></p>
   
   
 </td></tr></table>
 
-  <p>The formation of a natural pearl begins when a foreign substance slips into the oyster between the mantle and the shell, which irritate­s the mantle. It's kind of like the oyster getting a splinter. The oyster's natural reaction is to cover up that irritant to protect itself. The man­tle covers the irritant with layers of the same nacre substance that is used to create the shell. This eventually forms a pearl.<br>So a pearl is a foreign substance covered with layers of nacre. Most pearls that we see in jewelry stores are nicely rounded objects, which are the most valuable ones.<br>Not all pearls turn out so well. Some pearls form in an uneven shape these are called baroque pearls. Pearls, as you've probably noticed, come in a variety of various colors, including white, black, gray, red, blue and green.<br> Most pearls can be found all over the world, but black pearls are indigenous to the South Pacific.</p>
-  
+<p>Physical features<br>
+Flying birds have:<br>
+
+lightweight, smooth feathers – this reduces the forces of weight and drag<br>
+a beak, instead of heavy, bony jaws and teeth – this reduces the force of weight<br>
+an enlarged breastbone called a sternum for flight muscle attachment – this helps with the force of thrust<br>
+light bones – a bird’s bones are basically hollow with air sacs and thin, tiny cross pieces to make bones stronger – this reduces the force of weight<br>
+a rigid skeleton to provide firm attachments for powerful flight muscles – this helps with the force of thrust<br>
+a streamlined body – this helps reduce the force of drag<br>
+wings – these enable the force of lift. </p> 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/mwR5WXmY3Yc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <!--
   <video width="400" controls>
