--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 <ul>
 <li><p><a href="oyster.html">How do oysters make pearls</a></p>
 </li>
+<li><p><a href="bird.html">How do birds fly</a></p>
+</li>
 </ul>
 
   
