--- a/bird.html
+++ b/bird.html
@@ -4,7 +4,7 @@
 <head>
 <title>How do birds fly</title>
 </head>
-<body style="background-color:DarkTurquoise;">
+<body style="background-color:Gold;">
 <div id="fwtitle">
 <div id="toptitle">
   </div>
