--- a/bird.html
+++ b/bird.html
@@ -16,7 +16,7 @@
 </td>
   <td id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="oster 200x125.jpg" alt="alt text" width="200px" height="125px" />&nbsp;</td>
+<img src="bird.png" alt="alt text" width="200px" height="175px" />&nbsp;</td>
 <td align="left">
 <p><br />
 
