--- a/bird.html
+++ b/bird.html
@@ -1,5 +1,4 @@
-
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>How do birds fly</title>
@@ -20,7 +19,7 @@
 <td align="left">
 <p><br />
 
-<p style="font-size:50px;">>How do birds fly</p>
+<p style="font-size:50px;">How do birds fly</p>
 <br/></p>
   
   
