--- a/cats.html
+++ b/cats.html
@@ -25,18 +25,12 @@
   
 </td></tr></table>
 
-<p>Physical features<br>
-Flying birds have:<br>
-
-lightweight, smooth feathers – this reduces the forces of weight and drag<br>
-a beak, instead of heavy, bony jaws and teeth – this reduces the force of weight<br>
-an enlarged breastbone called a sternum for flight muscle attachment – this helps with the force of thrust<br>
-light bones – a bird’s bones are basically hollow with air sacs and thin, tiny cross pieces to make bones stronger – this reduces the force of weight<br>
-a rigid skeleton to provide firm attachments for powerful flight muscles – this helps with the force of thrust<br>
-a streamlined body – this helps reduce the force of drag<br>
-wings – these enable the force of lift.<br> 
-how does it work:<br>
-Birds' wings flap with an up-and-down motion. This propels them forward. The entire wingspan has to be at the right angle of attack,<br>which means the wings have to twist (and do so automatically) with each downward stroke to keep aligned with the direction of travel
+<p>By doing research scientists has found out that only cats who fall from places higher than 80 feet above the ground.<br>
+This is so because once the cat fall from a certain height it take some time to go to its terminal velocity where it is ready to fall<br>
+and by this time it has already passed 70 feet.<br>
+After it has reached its terminal velocity stage it can twist itself in midair so that its feet are under them when it lands.<br>
+This reflex keeps it from grinding into the ground face first or back first. Plus, cats have no working clavicles, flexible backbones,<br>
+powerful back legs, and low body weight. These things work together to minimize the impact of a fall.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/KOSnDVjN1xQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <!--
   <video width="400" controls>
