--- a/cats.html
+++ b/cats.html
@@ -3,7 +3,7 @@
 <head>
 <title>How do cats survive massive falls</title>
 </head>
-<body style="background-color:Gold;">
+<body style="background-color:HotPink;">
 <div id="fwtitle">
 <div id="toptitle">
 </div>
