--- a/cats.html
+++ b/cats.html
@@ -15,7 +15,7 @@
 </td>
 <td id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="cat 160 90.avif" alt="alt text" width="160px" height="90px" />&nbsp;</td>
+<img src="behaviour-hunting.png" alt="alt text" width="200px" height="100px" />&nbsp;</td>
 <td align="left">
 <p><br />
 
