--- a/cats.html
+++ b/cats.html
@@ -25,7 +25,7 @@
   
 </td></tr></table>
 
-<p>By doing research scientists has found out that only cats who fall from places higher than 80 feet above the ground.<br>
+<p>By doing research scientists have found out that only cats who fall from places higher than 80 feet above the ground.<br>
 This is so because once the cat fall from a certain height it take some time to go to its terminal velocity where it is ready to fall<br>
 and by this time it has already passed 70 feet.<br>
 After it has reached its terminal velocity stage it can twist itself in midair so that its feet are under them when it lands.<br>
