--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </li>
 <li><p>Pasta and Mamma chicken (Mamma chicken is a dish wish my mother makes) which are my favourite food</p>
 </li>
-<li><p>Isuzu D-max Z-prestige which is my favourite type of car</p>
+<li><p>Isuzu D-max Z-prestige, and Buggati Bloide are my favourite cars</p>
 </li>
-<li><p>I want to be a scientist when I grow up.(My favourite job:scientist)</p>
+<li><p>I want to be a scientist when I grow up. (My favourite job: scientist)</p>
 </li>
 </ul>
 
