--- a/stories.html
+++ b/stories.html
@@ -43,6 +43,8 @@
 </li>
 <li><p><a href="https://docs.google.com/document/d/1Ua4OI3Y0Exzx1Lc4zSxXQEp_OKvPBYwjEk3X1-y_9MQ/edit#">The Chase In The Dream</a></p>
 </li>
+<li><p><a href="https://docs.google.com/document/d/13ZYQzqItikEdi_WYipGYiMMg2H8wgQCbOeZToGCAXk8/edit">The Talent Competition</a></p>
+</li>
 </ul>
   
 
