--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </li>
 <li><p>I am an Indian</p>
 </li>
-<li><p>I am 11+ years old</p>
+<li><p>I am 12+ years old</p>
 </li>
 <li><p>I study in a school called Kendriya Vidyalaya Kanjikode</p>
 </li>
@@ -114,7 +114,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </li>
 <li><p><a href="https://nmrinl.github.io/index.html">Mrinal Kanti Das</a> (My Father)</p>
 </li>
-<li><p>If you liked my games and stuff which I made in Scratch then look in the link<a href="https://scratch.mit.edu/users/griffpatch/"> Griffpatch Coder in Scratch</a></p>
+<li><p>If you liked my games and stuff that I made in Scratch then look in the link<a href="https://scratch.mit.edu/users/griffpatch/"> Griffpatch Coder in Scratch</a></p>
 </li>
 </ul>
  
