--- a/stories.html
+++ b/stories.html
@@ -45,6 +45,9 @@
 </li>
 <li><p><a href="https://docs.google.com/document/d/13ZYQzqItikEdi_WYipGYiMMg2H8wgQCbOeZToGCAXk8/edit">The Talent Competition</a></p>
 </li>
+<li><p><a href="<li><p><a href="https://docs.google.com/document/d/13ZYQzqItikEdi_WYipGYiMMg2H8wgQCbOeZToGCAXk8/edit">The Trip to Thasrak</a></p>
+</li>">The Talent Competition</a></p>
+</li>
 </ul>
   
 
