--- a/stories.html
+++ b/stories.html
@@ -45,7 +45,7 @@
 </li>
 <li><p><a href="https://docs.google.com/document/d/13ZYQzqItikEdi_WYipGYiMMg2H8wgQCbOeZToGCAXk8/edit">The Talent Competition</a></p>
 </li>
-<li><p><a href="<li><p><a href="https://docs.google.com/document/d/1VEM20gYrxZpyGFWHoXk-0-1GYm-0Xuy-_fhmfxR2Ikk/edit">The Trip to Thasrak</a></p>
+  <li><p><a href="https://docs.google.com/document/d/1VEM20gYrxZpyGFWHoXk-0-1GYm-0Xuy-_fhmfxR2Ikk/edit">The Trip to Thasrak</a></p>
 </li>
 </ul>
   
