--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
  
 <h2 style="background-color:yellow;">My Favourites</h2>
 <ul>
-<li><p>Rabbits and Tigers which are my favourite animals</p>
+<li><p>Rabbits and Tigers is my favourite animals</p>
 </li>
-<li><p>Badminton and Football which are my favourite sports</p>
+<li><p>Basketball is my favourite sports</p>
 </li>
-<li><p>Mathematics which is my favourite subject</p>
+<li><p>Mathematics is my favourite subject</p>
 </li>
-<li><p>Pasta and Mamma chicken (Mamma chicken is a dish wish my mother makes) which are my favourite food</p>
+<li><p>Pasta is my favourite food</p>
 </li>
-<li><p>Isuzu D-max Z-prestige, and Buggati Bloide are my favourite cars</p>
+<li><p>Ford Raptor, and Buggati Bloide are my favourite cars</p>
 </li>
 <li><p>I want to be a scientist when I grow up. (My favourite job: scientist)</p>
 </li>
